shopsphere/k8s/network/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-policy
  namespace: shopsphere

spec:

  podSelector:
    matchLabels:
      app: shopsphere-backend

  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:

        - podSelector:
            matchLabels:
              app: shopsphere-frontend

      ports:

        - protocol: TCP
          port: 8080

  egress:

    - to:

        - podSelector:
            matchLabels:
              app: postgres

      ports:

        - protocol: TCP
          port: 5432

    - to:

        - podSelector:
            matchLabels:
              app: redis

      ports:

        - protocol: TCP
          port: 6379

    - to:

        - namespaceSelector: {}

      ports:

        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
