shopsphere/k8s/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: shopsphere
spec:
  podSelector: {}
  policyTypes:
    - Ingress
